ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Order/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <label>Coupon Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>