ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Order/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <description>Twin field from Cart - for b2b commerce</description>
    <label>Order Notes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>