ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Order/fields/Other_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Other_Shipping__c</fullName>
    <label>Other Shipping</label>
    <length>80</length>
    <type>Text</type>
</CustomField>